@@ -17,6 +17,10 @@
 
 package org.opensaml.profile.action;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.function.Function;
+import java.util.function.Predicate;
+
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
@@ -27,9 +31,6 @@ import org.opensaml.messaging.handler.MessageHandlerException;
 import org.opensaml.profile.context.ProfileRequestContext;
 import org.opensaml.profile.context.navigate.ParentProfileRequestContextLookup;
 
-import com.google.common.base.Function;
-import com.google.common.base.Functions;
-import com.google.common.base.Predicate;
 import com.google.common.base.Predicates;
 
 import net.shibboleth.utilities.java.support.component.DestructableComponent;
@@ -45,7 +46,8 @@ public abstract class AbstractHandlerDelegatingProfileAction<DelegateType extend
         extends AbstractConditionalProfileAction {
     
     /** Lookup function for parent ProfileRequestContext. */
-    private static final ParentProfileRequestContextLookup PRC_LOOKUP = new ParentProfileRequestContextLookup();
+    @Nonnull private static final ParentProfileRequestContextLookup<MessageContext> PRC_LOOKUP
+        = new ParentProfileRequestContextLookup<>();
     
     /** The message handler delegate. */
     @Nonnull private DelegateType delegate;
@@ -69,8 +71,9 @@ public abstract class AbstractHandlerDelegatingProfileAction<DelegateType extend
             @Nonnull final ContextDataLookupFunction<ProfileRequestContext, MessageContext> lookup) {
         Constraint.isNotNull(delegateClass, "Delegate class may not be null");
         try {
-            delegate = delegateClass.newInstance();
-        } catch (final InstantiationException | IllegalAccessException e) {
+            delegate = delegateClass.getDeclaredConstructor().newInstance();
+        } catch (final InstantiationException | IllegalAccessException | IllegalArgumentException |
+                InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new RuntimeException(e);
         }
         
@@ -126,9 +129,8 @@ public abstract class AbstractHandlerDelegatingProfileAction<DelegateType extend
     @Nullable protected Predicate<MessageContext> adapt(@Nullable final Predicate<ProfileRequestContext> predicate) {
         if (predicate == null) {
             return null;
-        } else {
-            return Predicates.compose(predicate, PRC_LOOKUP);
         }
+        return Predicates.compose(predicate::test, PRC_LOOKUP::apply);
     }
 
     /**
@@ -144,9 +146,8 @@ public abstract class AbstractHandlerDelegatingProfileAction<DelegateType extend
             @Nullable final Function<ProfileRequestContext, T> function) {
         if (function == null) {
             return null;
-        } else {
-            return Functions.compose(function, PRC_LOOKUP);
         }
+        return function.compose(PRC_LOOKUP);
     }
 
     /** {@inheritDoc} */
