@@ -26,6 +26,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -49,8 +50,6 @@ import org.opensaml.security.x509.X509Credential;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.base.Function;
-
 /**
  *  Function which implements default behavior for building an instance of {@link ValidationContext}
  *  from an instance of {@link SAML20AssertionTokenValidationInput}.
@@ -59,7 +58,7 @@ public class DefaultSAML20AssertionValidationContextBuilder
         implements Function<SAML20AssertionTokenValidationInput, ValidationContext> {
     
     /** Logger. */
-    private Logger log = LoggerFactory.getLogger(DefaultSAML20AssertionValidationContextBuilder.class);
+    @Nullable private Logger log = LoggerFactory.getLogger(DefaultSAML20AssertionValidationContextBuilder.class);
     
     /** A function for resolving the signature validation CriteriaSet for a particular function. */
     private Function<Pair<MessageContext, Assertion>, CriteriaSet> signatureCriteriaSetFunction;
@@ -71,7 +70,6 @@ public class DefaultSAML20AssertionValidationContextBuilder
      * Constructor.
      */
     public DefaultSAML20AssertionValidationContextBuilder() {
-        super();
         signatureRequired = true;
     }
 
@@ -150,7 +148,7 @@ public class DefaultSAML20AssertionValidationContextBuilder
         final HashMap<String, Object> staticParams = new HashMap<>();
         
         //For signature validation
-        staticParams.put(SAML2AssertionValidationParameters.SIGNATURE_REQUIRED, new Boolean(isSignatureRequired()));
+        staticParams.put(SAML2AssertionValidationParameters.SIGNATURE_REQUIRED, Boolean.valueOf(isSignatureRequired()));
         staticParams.put(SAML2AssertionValidationParameters.SIGNATURE_VALIDATION_CRITERIA_SET, 
                 getSignatureCriteriaSet(input));
         
@@ -239,7 +237,7 @@ public class DefaultSAML20AssertionValidationContextBuilder
             @Nonnull final SAML20AssertionTokenValidationInput input) {
         try {
             final X509Credential credential = new ServletRequestX509CredentialAdapter(input.getHttpServletRequest());
-            return ((X509Credential)credential).getEntityCertificate();
+            return credential.getEntityCertificate();
         } catch (final SecurityException e) {
             log.warn("Peer TLS X.509 certificate was not present. " 
                     + "Holder-of-key proof-of-possession via client TLS cert will not be possible");
@@ -321,10 +319,9 @@ public class DefaultSAML20AssertionValidationContextBuilder
                 validAddresses.addAll(Arrays.asList(addresses));
                 log.debug("Resolved valid subject confirmation InetAddress set: {}", validAddresses);
                 return validAddresses;
-            } else {
-                log.warn("Could not determine attester IP address. Validation of Assertion may or may not succeed");
-                return Collections.emptySet();
             }
+            log.warn("Could not determine attester IP address. Validation of Assertion may or may not succeed");
+            return Collections.emptySet();
         } catch (final UnknownHostException e) {
             log.warn("Processing of attester IP address failed. Validation of Assertion may or may not succeed", e);
             return Collections.emptySet();
